# mdold

./: .env.example  .gitignore  .mcp.json  DEV_CHECKPOINT_20260324.md  FIX_OAUTH_SCOPE.md  README.md  REQUIREMENTS.md  VERIFICATION_REPORT.md  pyproject.toml
scripts/: verify_all_apis.py
sdk_reference/: README.md
src/mingdao_collab_mcp/: __init__.py  api_client.py  auth.py  server.py  tools_calendar.py  tools_company.py  tools_group.py  tools_message.py  tools_passport.py  tools_post.py  tools_task.py  tools_user.py  tools_webchat.py
