[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mingdao-collab-mcp"
version = "0.1.0"
description = "MCP Server for Mingdao Collaboration-era v1 API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mingdao-collab-mcp = "mingdao_collab_mcp.server:main"
